Aggiunte le foto

--- a/FIGMMA/src/main/resources/application.properties
+++ b/FIGMMA/src/main/resources/application.properties
@@ -37,6 +37,14 @@ spring.messages.encoding=ISO-8859-1
 
 spring.main.allow-circular-references=true
 
+#==================================
+# = Files configurations
+#==================================
+spring.servlet.multipart.max-file-size = 15MB
+spring.servlet.multipart.max-request-size = 15MB
+spring.web.resources.static-locations[0]=file:src/main/resources/static
+spring.web.resources.static-locations[1]=classpath:/static
+
 
 #spring.security.user.name="user"
 #spring.security.user.password="pwd"
